# membershipDB_refreshDroplet

./: .env  .env.example  .gitignore  README.md  intall_instrx.txt  output.csv  parameterizedSQL.sql  plan-csvToDirectDbWrite.prompt.md  plan-sshBridgeDecorator.prompt.md  pyproject.toml  requirements.txt  select_activity_details_parameterized.sql
sql/: create_selectActivityReport_temp.sql  cte_select_activity_detail.sql  derived_table_select_activity.sql  rawSelectActivityReport_refactored_mariadb  rawSelectActivityReport_refactored_mariadb.sql  select_activity_details_raw.sql
src/pipeline/: __init__.py  cli.py  importer.py  query_runner.py  validator.py
src/uv/: cli.py  importer.py  query_runner.py  validator.py
tests/: pytest.ini  test_completed_monkey_patch.py  test_importer.py  test_integration.py  test_w_monkey.py
tests/fixtures/: select_activity_snapshot.csv
