[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uv"
version = "0.1.0"
description = "Query runner for membership_db updates"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.8",
]

[project.dependencies]
mysql-connector-python = "*"
python-dotenv = "*"

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
uv = "uv.cli:main"
